# mobile_igtl

./: CMakeLists.txt  README.md
docs/: DEPLOYMENT.md
ios/: LaunchScreen.storyboard
ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
qml/: ConnectionPanel.qml  MainWindow.qml  OrientationView.qml  main.qml
src/: applicationcontroller.cpp  applicationcontroller.h  igtlclient.cpp  igtlclient.h  main.cpp  networkmanager.cpp  networkmanager.h  orientationsensor.cpp  orientationsensor.h  rotationsensor.cpp  rotationsensor.h
